# AITokenForge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  cli.py  config.py  main.py  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  dependencies.py
backend/api/middleware/: __init__.py  logging.py  rate_limit.py
backend/api/routes/: __init__.py  analyze.py  health.py  models.py  optimize.py
backend/models/: __init__.py  config.py  requests.py  responses.py
backend/services/: __init__.py  cost_estimator.py  graph_optimizer.py  optimization_engine.py  semantic_engine.py  token_analyzer.py
backend/services/llm_adapters/: __init__.py  base.py  mock_adapter.py  ollama_adapter.py
backend/tests/: test_api.py  test_cost_estimator.py  test_semantic_engine.py  test_token_analyzer.py
backend/utils/: __init__.py  logger.py  sanitizer.py  validators.py
benchmarks/: benchmark_suite.py
docker/: backend.Dockerfile  docker-compose.prod.yml  frontend.Dockerfile  nginx.conf
docs/: CONTRIBUTING.md  INSTALLATION.md  MCP_INTEGRATION.md  TROUBLESHOOTING.md  api.md  architecture.md
examples/: basic_optimization.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CustomModelDialog.tsx  ErrorLog.tsx  ModeSelector.tsx  OptimizedOutput.tsx  PromptInput.tsx  ResultsPanel.tsx  StatusBar.tsx  SupportBanner.tsx
frontend/src/hooks/: useCustomModels.ts  useModels.ts  useOptimize.ts
frontend/src/types/: index.ts
installer/: install.py
launcher/: launch.py
mcp_server/: cli.py  server.py
scripts/: dev.sh  launch.bat  launch.sh  setup.sh  start-backend.bat
