[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenforge"
version = "1.0.1"
description = "AI Cost Optimization Infrastructure — reduce LLM token usage while preserving semantic intent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mahendra Kumar", email = "nitiemahendra@gmail.com" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "httpx==0.28.1",
    "tiktoken==0.8.0",
    "sentence-transformers==3.3.1",
    "numpy==1.26.4",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "anyio==4.7.0",
    "ruff==0.8.6",
    "mypy==1.13.0",
    "faker==33.1.0",
    "black==24.10.0",
    "pre-commit==4.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
